--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                 <li> <b>
                     <font color="#FF0000">[2024.02]</font>
-                </b>  Paper of Yang Wang was published by Intelligent Computing (
+                </b> Paper of Yang Wang was published by Intelligent Computing (
                     <a href="https://spj.science.org/doi/10.34133/icomputing.0065" target="_blank">
                 <font>王洋论文被Science伙伴期刊Intelligent Computing录用</font>
                 </a>)【混合场信道太赫兹RIS深度学习信道插值与波束赋形】
@@ -1300,8 +1300,8 @@
 
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>
-                                <font color="#FF0000">[R14]</font> Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
-                                "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
+                                <font color="#FF0000">[R14]</font> Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
+                                "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
                             </span>
                         </p>
 
@@ -1499,8 +1499,8 @@
 
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
                             <span>
-                                <font color="#FF0000">[R3]</font> Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
-                                "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
+                                <font color="#FF0000">[R3]</font> Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
+                                "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
                             </span>
                         </p>
 
@@ -1619,31 +1619,36 @@
                             [<a href="https://arxiv.org/abs/2406.03438" target="_blank">arXiv</a>]
                             [<a href="https://github.com/BIT-ZY/CSI-GPT" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>] <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.48550/arXiv.2406.03438"> 
+                            </a>] 
+                            <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.48550/arXiv.2406.03438">  -->
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[73] Z. Li, <b>Z. Gao</b>, et al. "Unauthorized UAV Countermeasure for Low-Altitude Economy: Joint Communications and Jamming based on MIMO Cellular Systems," accepted by IEEE IOTJ. 2024.
-                            [<a href="https://arxiv.org/pdf/2410.22746" target="_blank">arXiv</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.48550/arXiv.2410.22746"> 
+                            [<a href="https://arxiv.org/pdf/2410.22746" target="_blank">arXiv</a>]
+                            <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.48550/arXiv.2410.22746">  -->
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[72] K. Ying, <b>Z. Gao</b>, Y. Su, T. Qin, M. Matthaiou and R. Schober, "Reconfigurable Massive MIMO: Precoding Design and Channel Estimation in the Electromagnetic Domain," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2024.3485587.                  
-                            [<a href="https://xplorestaging.ieee.org/document/10731874" target="_blank">IEEE URL</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TCOMM.2024.3485587"> 
+                            [<a href="https://xplorestaging.ieee.org/document/10731874" target="_blank">IEEE URL</a>]
+                            <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TCOMM.2024.3485587">  -->
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[71] L. Lu, Z. Wang, <b>Z. Gao</b>, S. Chen and H. Vincent Poor, "Block-Sparse Tensor Recovery," in IEEE Transactions on Information Theory, doi: 10.1109/TIT.2024.3447050.
-                            [<a href="https://ieeexplore.ieee.org/document/10643188" target="_blank">IEEE URL</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TIT.2024.3447050"> 
+                            [<a href="https://ieeexplore.ieee.org/document/10643188" target="_blank">IEEE URL</a>]
+                            <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TIT.2024.3447050">  -->
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[70] Hongshan Liu, Tong Qin, <b>Zhen Gao</b>, Tianqi Mao, Keke Ying, Ziwei Wan, Li Qiao, Rui Na, Zhongxiang Li, Chun Hu, et al. Near-Space Communications: The Last Piece of 6G Space–Air–Ground–Sea Integrated Network Puzzle. Space Sci Technol. 2024;4:0176.DOI:10.34133/space.0176.
-                            [<a href="https://spj.science.org/doi/full/10.34133/space.0176" target="_blank">Space: Science & Technology URL</a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.34133/space.0176"> 
+                            [<a href="https://spj.science.org/doi/full/10.34133/space.0176" target="_blank">Space: Science & Technology URL</a>]
+                            <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.34133/space.0176">  -->
                         </span>
                     </p>
 
@@ -1652,7 +1657,8 @@
                             [<a href="https://ieeexplore.ieee.org/document/10680080" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/wuminghui123/JSCBF" target="_blank">
                                 <font color="#FF0000">Codes</font>
-                            </a>]<img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2024.3460084">
+                            </a>]
+                            <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2024.3460084"> -->
                         </span>
                     </p>
                     <div class="panel panel-default">
@@ -1697,7 +1703,7 @@
                     </p>
 
                     <p class="pcontainer">
-                        <span>[65] Kuiyu Wang, <b>Zhen Gao</b>, Sheng Chen, Boyu Ning, Gaojie Chen, Yu Su, Zhaocheng Wang, H. Vincent Poor, "Knowledge and Data Dual-Driven Channel Estimation and Feedback for Ultra-Massive MIMO Systems under Hybrid Field Beam Squint Effect," 
+                        <span>[65] Kuiyu Wang, <b>Zhen Gao</b>, Sheng Chen, Boyu Ning, Gaojie Chen, Yu Su, Zhaocheng Wang, H. Vincent Poor, "Knowledge and Data Dual-Driven Channel Estimation and Feedback for Ultra-Massive MIMO Systems under Hybrid Field Beam Squint Effect," 
                             in IEEE Transactions on Wireless Communications, vol. 23, no. 9, pp. 11240-11259, Sept. 2024. 
                             [<a href="https://ieeexplore.ieee.org/document/10486834" target="_blank">IEEE URL</a>]
                         </span>
@@ -1724,13 +1730,13 @@
 
                     <p class="pcontainer">
                         <span>[64] Yang Wang, <b>Zhen Gao</b>, Sheng Chen, Chun Hu, Dezhi Zheng, "Deep Learning–Based Channel Extrapolation and Multiuser Beamforming for RIS-aided 
-                            Terahertz Massive MIMO Systems over Hybrid-Field Channels," Intelligent Computing, 13 Mar 2024 Vol 3.
+                            Terahertz Massive MIMO Systems over Hybrid-Field Channels," Intelligent Computing, 13 Mar 2024 Vol 3.
                             [<a href="https://spj.science.org/doi/full/10.34133/icomputing.0065" target="_blank">URL</a>]
                         </span>
                     </p>
 
                     <p class="pcontainer">
-                        <span>[63] Yifei Zhang, <b>Zhen Gao</b>, Jingjing Zhao, Ziming He, Yunsheng Zhang, Chen Lu, Pei Xiao, "AI Empowered Channel Semantic Acquisition for 
+                        <span>[63] Yifei Zhang, <b>Zhen Gao</b>, Jingjing Zhao, Ziming He, Yunsheng Zhang, Chen Lu, Pei Xiao, "AI Empowered Channel Semantic Acquisition for 
                             6G Integrated Sensing and Communication Networks," in IEEE Network, vol. 38, no. 2, pp. 45-53, March 2024.
                             [<a href="https://arxiv.org/abs/2401.09127" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10400499" target="_blank">IEEE URL</a>]
@@ -1760,7 +1766,7 @@
                     </div>
 
                     <p class="pcontainer">
-                        <span>[62] <b>Zhen Gao</b>, Malong Ke, Yikun Mei, Li Qiao, Sheng Chen, Derrick Wing Kwan Ng, H. Vincent Poor, 
+                        <span>[62] <b>Zhen Gao</b>, Malong Ke, Yikun Mei, Li Qiao, Sheng Chen, Derrick Wing Kwan Ng, H. Vincent Poor, 
                             "Compressive Sensing-Based Grant-Free Massive Access for 6G Massive Communication," in IEEE Internet of Things Journal, vol. 11, no. 5, pp. 7411-7435, 1 March1, 2024。
                             [<a href="https://arxiv.org/abs/2311.06770" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">IEEE URL</a>]
@@ -1768,8 +1774,8 @@
                     </p>
 
                     <p class="pcontainer">
-                        <span>[61] Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
-                            "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
+                        <span>[61] Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
+                            "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
                             [<a href="https://arxiv.org/abs/2307.10837" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10286475" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/All-World/TcomCode" target="_blank">
