bug: stat size issue

--- a/index.html
+++ b/index.html
@@ -3430,7 +3430,7 @@
                     <h2><i class="fa fa-universal-access" aria-hidden="true"></i>&nbsp;&nbsp;Statistics</h2>
                 </A>
 
-                <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=UEFMfVXK5eovztgYe8kYcqwQ4v33cNEPlguId9uvu0o'></script>
+                <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=tt&d=UEFMfVXK5eovztgYe8kYcqwQ4v33cNEPlguId9uvu0o'></script>
 
                 <!-- <script type="text/javascript" -->
                     <!-- src="//rf.revolvermaps.com/0/0/8.js?i=5kt146cjjfk&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=georgia&amp;l=33" -->
