--- a/index.html
+++ b/index.html
@@ -101,12 +101,38 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2025.01]</font>
+                </b> 博士毕业生柯玛龙获得中国电子教育学会优秀博士论文
+                <a href="https://mp.weixin.qq.com/s/YY2zZimkrB1_ACIfJTTQ4w" target="_blank">
+                <font>【详情】</font></a>
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2025.01]</font>
+                </b> 硕士毕业生周星宇获得中国卫星导航定位协会优秀硕士论文
+                <a href="https://mp.weixin.qq.com/s/XDJuW7k0a715r-b_-eFEIA" target="_blank">
+                <font>【详情】</font></a>
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.12]</font>
+                </b> 本科生马煜同学（大四已直博）以主持人身份获批被近视自然科学基金本科生“启研”计划
+                <a href="https://mp.weixin.qq.com/s/ECv8DY7B4ZwxRFxUvZg0Jg" target="_blank">
+                <font>【详情】</font></a>
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.11]</font>
+                </b> 博士生乔力、梅逸堃，硕士生刘泓杉、张翼飞获得研究生国家奖学金
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.10]</font>
                 </b> 吴铭晖、李卓然、王其飞获得第三届“华为杯”北京高校无线算法大赛一等奖奖金2万元 
                 <a href="https://mp.weixin.qq.com/s/LbjzQLlGzWd5-wBp6by1vg" target="_blank">
                     <font color="#FF0000">【北理工研究生教育公众号报道】</font>
                 </a>
-                <a href="https://mp.weixin.qq.com/s/hfXcKVycOCfD8Wya2ktuBg" target="_blank"></a>
+                <a href="https://mp.weixin.qq.com/s/hfXcKVycOCfD8Wya2ktuBg" target="_blank">
                     <font color="#FF0000">【北理工交叉院新闻报道】</font>
                 </a>
                 </li>
