--- a/index.html
+++ b/index.html
@@ -1639,6 +1639,7 @@
                     <p class="pcontainer">
                         <span>[74] Ye Zeng, Li Qiao, <b>Zhen Gao</b>, Tong Qin, Zhonghuai Wu, Emad Khalaf, Sheng Chen and Mohsen Guizani. "CSI-GPT: Integrating Generative Pre-Trained Transformer with Federated-Tuning to Acquire Downlink Massive MIMO Channels," accepted in IEEE Transactions on Vehicular Technology. 2024.
                             [<a href="https://arxiv.org/abs/2406.03438" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10746627" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/BIT-ZY/CSI-GPT" target="_blank">
                                 <font color="#FF0000">Codes</font>
                             </a>] 
@@ -1649,12 +1650,14 @@
                     <p class="pcontainer">
                         <span>[73] Z. Li, <b>Z. Gao</b>, et al. "Unauthorized UAV Countermeasure for Low-Altitude Economy: Joint Communications and Jamming based on MIMO Cellular Systems," accepted by IEEE IOTJ. 2024.
                             [<a href="https://arxiv.org/pdf/2410.22746" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10759668" target="_blank">IEEE URL</a>]
                             <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.48550/arXiv.2410.22746">  -->
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[72] K. Ying, <b>Z. Gao</b>, Y. Su, T. Qin, M. Matthaiou and R. Schober, "Reconfigurable Massive MIMO: Precoding Design and Channel Estimation in the Electromagnetic Domain," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2024.3485587.                  
+                            [<a href="https://arxiv.org/abs/2405.02823" target="_blank">arXiv</a>]
                             [<a href="https://xplorestaging.ieee.org/document/10731874" target="_blank">IEEE URL</a>]
                             <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TCOMM.2024.3485587">  -->
                         </span>
@@ -1662,6 +1665,7 @@
 
                     <p class="pcontainer">
                         <span>[71] L. Lu, Z. Wang, <b>Z. Gao</b>, S. Chen and H. Vincent Poor, "Block-Sparse Tensor Recovery," in IEEE Transactions on Information Theory, doi: 10.1109/TIT.2024.3447050.
+                            [<a href="https://arxiv.org/abs/2402.02410" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10643188" target="_blank">IEEE URL</a>]
                             <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TIT.2024.3447050">  -->
                         </span>
@@ -1669,6 +1673,7 @@
 
                     <p class="pcontainer">
                         <span>[70] Hongshan Liu, Tong Qin, <b>Zhen Gao</b>, Tianqi Mao, Keke Ying, Ziwei Wan, Li Qiao, Rui Na, Zhongxiang Li, Chun Hu, et al. Near-Space Communications: The Last Piece of 6G Space–Air–Ground–Sea Integrated Network Puzzle. Space Sci Technol. 2024;4:0176.DOI:10.34133/space.0176.
+                            [<a href="https://arxiv.org/abs/2401.00283" target="_blank">arXiv</a>]
                             [<a href="https://spj.science.org/doi/full/10.34133/space.0176" target="_blank">Space: Science & Technology URL</a>]
                             <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.34133/space.0176">  -->
                         </span>
@@ -1676,6 +1681,7 @@
 
                     <p class="pcontainer">
                         <span>[69] Minghui Wu, <b>Zhen Gao</b>, Zhaocheng Wang, Dusit Niyato, George K. Karagiannidis and Sheng Chen, "Deep Joint Semantic Coding and Beamforming for Near-Space Airship-Borne Massive MIMO Network," in IEEE Journal on Selected Areas in Communications, doi: 10.1109/JSAC.2024.3460084.
+                            [<a href="https://arxiv.org/abs/2405.19889" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10680080" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/wuminghui123/JSCBF" target="_blank">
                                 <font color="#FF0000">Codes</font>
@@ -1705,18 +1711,21 @@
 
                     <p class="pcontainer">
                         <span>[68] Q. Luo et al., "AFDM-SCMA: A Promising Waveform for Massive Connectivity over High Mobility Channels," in IEEE Transactions on Wireless Communications, doi: 10.1109/TWC.2024.3413980.
+                            [<a href="https://arxiv.org/abs/2312.11302" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10566604" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[67] L. Qiao, M. B. Mashhadi, <b>Z. Gao</b>, C. H. Foh, P. Xiao and M. Bennis, "Latency-Aware Generative Semantic Communications With Pre-Trained Diffusion Models," in IEEE Wireless Communications Letters, doi: 10.1109/LWC.2024.3429295.
+                            [<a href="https://arxiv.org/abs/2403.17256" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10599525" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
                     <p class="pcontainer">
                         <span>[66] L. Qiao, <b>Z. Gao</b>, M. B. Mashhadi, and D. Gündüz, "Massive digital over-the-air computation for communication-efficient federated edge learning," in IEEE Journal on Selected Areas in Communications, doi: 10.1109/JSAC.2024.3431572.  
+                            [<a href="https://arxiv.org/abs/2405.15969" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10648926" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/liqiao19/MD-AirComp" target="_blank">
                                 <font color="#FF0000">Codes</font>
@@ -1727,6 +1736,7 @@
                     <p class="pcontainer">
                         <span>[65] Kuiyu Wang, <b>Zhen Gao</b>, Sheng Chen, Boyu Ning, Gaojie Chen, Yu Su, Zhaocheng Wang, H. Vincent Poor, "Knowledge and Data Dual-Driven Channel Estimation and Feedback for Ultra-Massive MIMO Systems under Hybrid Field Beam Squint Effect," 
                             in IEEE Transactions on Wireless Communications, vol. 23, no. 9, pp. 11240-11259, Sept. 2024. 
+                            [<a href="https://arxiv.org/abs/2403.12813" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10486834" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
