--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <li> <b>
                     <font color="#FF0000">[2024.12]</font>
-                </b> 本科生马煜同学（大四已直博）以主持人身份获批被近视自然科学基金本科生“启研”计划
+                </b> 本科生马煜同学（大四已直博）以主持人身份获批北京市自然科学基金本科生“启研”计划
                 <a href="https://mp.weixin.qq.com/s/ECv8DY7B4ZwxRFxUvZg0Jg" target="_blank">
                 <font>【详情】</font></a>
                 </li>
@@ -1658,7 +1658,7 @@
                     <p class="pcontainer">
                         <span>[72] K. Ying, <b>Z. Gao</b>, Y. Su, T. Qin, M. Matthaiou and R. Schober, "Reconfigurable Massive MIMO: Precoding Design and Channel Estimation in the Electromagnetic Domain," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2024.3485587.                  
                             [<a href="https://arxiv.org/abs/2405.02823" target="_blank">arXiv</a>]
-                            [<a href="https://xplorestaging.ieee.org/document/10731874" target="_blank">IEEE URL</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10731874" target="_blank">IEEE URL</a>]
                             <!-- <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/TCOMM.2024.3485587">  -->
                         </span>
                     </p>
