add new journal paper

--- a/index.html
+++ b/index.html
@@ -1637,6 +1637,17 @@
             <font size="3">
                 <ul>
                     <p class="pcontainer">
+                        <span>[75] S. Liu, X. Yu, Z. Gao, J. Xu, D. W. K. Ng, and S. Cui, "Sensing-Enhanced Channel Estimation for Near-Field XL-MIMO Systems," <i>IEEE J. Sel. Areas Commun.</i>, vol. 43, no. 3, pp. 628-643, March 2025.
+                            [<a href="https://arxiv.org/abs/2403.11809" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10845870" target="_blank">IEEE URL</a>]
+                            [<a href="https://github.com/scliubit/sensing-ce-xlmimo" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>] 
+                            <img src="https://api.juleskreuer.eu/citation-badge.php?doi=10.1109/JSAC.2025.3531578"> 
+                        </span>
+                    </p>
+
+                    <p class="pcontainer">
                         <span>[74] Ye Zeng, Li Qiao, <b>Zhen Gao</b>, Tong Qin, Zhonghuai Wu, Emad Khalaf, Sheng Chen and Mohsen Guizani. "CSI-GPT: Integrating Generative Pre-Trained Transformer with Federated-Tuning to Acquire Downlink Massive MIMO Channels," accepted in IEEE Transactions on Vehicular Technology. 2024.
                             [<a href="https://arxiv.org/abs/2406.03438" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10746627" target="_blank">IEEE URL</a>]
