fix: shields.io api change

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <font size="4">Dr. Zhen Gao (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font></i><a href="https://scholar.google.com/citations?user=4ylyExkAAAAJ">
-                                    <img src="https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/gaozhen16/gaozhen16.github.io/google-scholar-stats/gs_data_shieldsio.json&logo=Google%20Scholar&labelColor=f6f6f6&color=9cf&style=flat&label=cite" height="20px" margin-top="20px">
+                                    <img src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgaozhen16%2Fgaozhen16.github.io%2Fgoogle-scholar-stats%2Fgs_data_shieldsio.json&query=message&style=flat&logo=Google%20Scholar&label=cite&labelColor=f6f6f6&color=9cf" height="20px" margin-top="20px">
                                   </a>
                             </a><br />
                         </p>
@@ -804,8 +804,8 @@
 
                 特别研究员、教授，博士生导师，入选国家级青年人才计划。主要从事宽带通信与智能信号处理，包括物联网机器类通信、智能边缘计算、空天地一体化信息网络、
                 6G 大规模 MIMO 通信，以及人工智能赋能6G通信等。获得IEEE Trans. Broadcast. 2016 最佳论文奖、IET Electron. Lett. 2016 最佳论文奖、UCET 2020 最佳
-                论文、IEEE/CIC ICCC 2021 最佳论文、IEEE IWCMC 2022最佳论文、EAI WiSATS 2022最佳学生论文奖。发表SCI 论文 60余 篇，包括9篇 ESI 高被引论文，2 篇前 
-                0.1%热点论文，谷歌学术引用4500余次。入选国家级青年人才计划、北京市科技新星、山东省优青、中国科协青年人才托举工程，爱思唯尔 2020、2021 、2022年中国
+                论文、IEEE/CIC ICCC 2021 最佳论文、IEEE IWCMC 2022最佳论文、EAI WiSATS 2022最佳学生论文奖。发表SCI 论文 60余篇，包括9篇 ESI 高被引论文，2 篇前 
+                0.1%热点论文，谷歌学术引用6000余次。入选国家级青年人才计划、北京市科技新星、山东省优青、中国科协青年人才托举工程，爱思唯尔 2020、2021、2022年中国
                 高被引学者，入选斯坦福大学全球前2%顶尖科学家榜单 (2020、2021、2022年度)，获得2021年中国电子学会自然科学一等奖、2022年中国电子学会技术发明一等奖、2022年中国指控学会科技进步一等奖。<!--担任IEEE Transactions 
                 Vehicular Technology编委、-->担任IEEE Communications Letters 编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
             </p>
