--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!--<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>-->
     <link rel="stylesheet" href="./Files/bootstrap.min.css">
-    <!-- <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <!-- <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css -->
@@ -1730,12 +1730,12 @@
                 <ul>
 
                     <p class="pcontainer">
-                        <span>[82] H. Zhang, M. Wu, L. Qiao, L. Liu, Z. Han and Z. Gao, "Residual Cross-Attention Transformer-Based Multi-User CSI Feedback With Deep Joint Source-Channel Coding," in <b>IEEE Wireless Communications Letters</b>. 
+                        <span>[82] H. Zhang, M. Wu, L. Qiao, L. Liu, Z. Han and <b>Z. Gao</b>, "Residual Cross-Attention Transformer-Based Multi-User CSI Feedback With Deep Joint Source-Channel Coding," in <b>IEEE Wireless Communications Letters</b>. 
                         </span>
                     </p>
 
                     <p class="pcontainer">
-                        <span>[81] Y. Tao, Z. Wan, Z. Li, Z. Gao, G. Chen and R. Na, "MmWave-LoRadar Empowered Vehicular Integrated Sensing and Communication Systems: LoRa Meets FMCW," in <i>IEEE Transactions on Vehicular Technology</i>.
+                        <span>[81] Y. Tao, Z. Wan, Z. Li, <b>Z. Gao</b>, G. Chen and R. Na, "MmWave-LoRadar Empowered Vehicular Integrated Sensing and Communication Systems: LoRa Meets FMCW," in <i>IEEE Transactions on Vehicular Technology</i>.
                             [<a href="https://ieeexplore.ieee.org/abstract/document/11007496/" target="_blank">IEEE URL</a>] 
                         </span>
                     </p>
@@ -1747,7 +1747,7 @@
                     </p>
 
                     <p class="pcontainer">
-                        <span>[79] R. Zhang, W. Wu, X. Chen, Z. Gao and Y. Cai, "Terahertz Integrated Sensing and Communication-Empowered UAVs in 6G: A Transceiver Design Perspective," in <i>IEEE Vehicular Technology Magazine</i>.
+                        <span>[79] R. Zhang, W. Wu, X. Chen, <b>Z. Gao</b> and Y. Cai, "Terahertz Integrated Sensing and Communication-Empowered UAVs in 6G: A Transceiver Design Perspective," in <i>IEEE Vehicular Technology Magazine</i>.
                         </span>
                     </p>
 
@@ -1758,20 +1758,20 @@
                     </p>
 
                     <p class="pcontainer">
-                        <span>[77] C. Huang, Y. Wen, L. Zhang, G. Chen, Z. Gao and P. Xiao, "Reconfigurable Intelligent Surface Empowered Full Duplex Systems: Opportunities and Challenges," <i>IEEE Communications Standards Magazine</i>, vol. 8, no. 4, pp. 16-22, December 2024.
+                        <span>[77] C. Huang, Y. Wen, L. Zhang, G. Chen, <b>Z. Gao</b> and P. Xiao, "Reconfigurable Intelligent Surface Empowered Full Duplex Systems: Opportunities and Challenges," <i>IEEE Communications Standards Magazine</i>, vol. 8, no. 4, pp. 16-22, December 2024.
                             [<a href="https://ieeexplore.ieee.org/abstract/document/10802977" target="_blank">IEEE URL</a>] 
                         </span>
                     </p>
 
                     <p class="pcontainer">
-                        <span>[76] Y. Wang, Y. Mei, Z. Gao et al., "Pre-Equalization Aided Grant-Free Massive Access in Massive MIMO System," <i>IEEE Transactions on Vehicular Technology</i>, vol. 74, no. 6, pp. 9979-9984, June 2025
+                        <span>[76] Y. Wang, Y. Mei, <b>Z. Gao</b> et al., "Pre-Equalization Aided Grant-Free Massive Access in Massive MIMO System," <i>IEEE Transactions on Vehicular Technology</i>, vol. 74, no. 6, pp. 9979-9984, June 2025
                             [<a href="https://arxiv.org/abs/2502.06239" target="_blank">arXiv</a>]
                             [<a href="https://xplorestaging.ieee.org/document/10891201" target="_blank">IEEE URL</a>] 
                         </span>
                     </p>
 
                     <p class="pcontainer">
-                        <span>[75] S. Liu, X. Yu, Z. Gao, J. Xu, D. W. K. Ng, and S. Cui, "Sensing-Enhanced Channel Estimation for Near-Field XL-MIMO Systems," <i>IEEE J. Sel. Areas Commun.</i>, vol. 43, no. 3, pp. 628-643, March 2025.
+                        <span>[75] S. Liu, X. Yu, <b>Z. Gao</b>, J. Xu, D. W. K. Ng, and S. Cui, "Sensing-Enhanced Channel Estimation for Near-Field XL-MIMO Systems," <i>IEEE J. Sel. Areas Commun.</i>, vol. 43, no. 3, pp. 628-643, March 2025.
                             [<a href="https://arxiv.org/abs/2403.11809" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10845870" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/scliubit/sensing-ce-xlmimo" target="_blank">
